# Object-Tracking

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  single_object_tracker.py
custom_trackers/: cotracker.py
misc/: stir.py
src/: main.py  trackers.py  visualize.py  vutils.py
src/datasets/: __init__.py  utils.py
src/datasets/stir/: stir.py
